[tool.poetry]
name = "gateway-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["SixTanDev <sixtandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
jmespath = "^1.0.1"
pymysql = "^1.1.0"
python-dotenv = "0.19.1"
aws-lambda-powertools = "^2.31.0"
pydantic = "^2.5.3"
loguru = "^0.7.2"
boto3 = "^1.34.14"
pytest = "^7.4.4"
bandit = "^1.7.6"
pylint = "^3.0.3"
ruff = "^0.1.13"
pytest-cov = "^4.1.0"
coverage = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
